fixed links in index.html

--- a/index.html
+++ b/index.html
@@ -22,22 +22,22 @@
   <nav>
     <ul>
       <li>
-        <a href="">Home</a>
+        <a href="https://kaitlynsamuelian.github.io/test-repo/index.html">Home</a>
       </li>
       <li>
         <a href="">Blog</a>
       </li>
       <li>
-        <a href="http://127.0.0.1:5500/about.html">About us</a>
+        <a href="https://kaitlynsamuelian.github.io/test-repo/about.html">About us</a>
       </li>
       <li>
         <a href="">Our history</a>
       </li>
       <li>
-        <a href="">Contacts</a>
+        <a href="https://kaitlynsamuelian.github.io/test-repo/contact.html">Contacts</a>
       </li>
       <li>
-        <a href="http://127.0.0.1:5500/landing1.html">Membership</a>
+        <a href="https://kaitlynsamuelian.github.io/test-repo/landing1.html">Membership</a>
       </li>
     </ul>
   </nav>
