--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
   </head>
 
 <body>
-  <div class="curtain-overlay"></div>
+  <div class="curtain-overlay">
+    <div class="curtain-left"></div>
+    <div class="curtain-right"></div>
+  </div>
+
     <div class="content">
         <h1>Welcome to Our Event</h1>
         <p>Explore the magic within.</p>
     </div>
-
-  <div class="logo">
-    My exciting website!
-  </div>
 
   <nav>
     <ul>
