--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <div class="curtain-left"></div>
     <div class="curtain-right"></div>
 
-    <div class="content">
+    <header class="content">
         <h1>Welcome to Our Event</h1>
         <p>Explore the magic within.</p>
-    </div>
+    </header>
 
   <nav>
     <ul>
