--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     <div class="curtain-left"></div>
     <div class="curtain-right"></div>
 
-    <header class="content">
+    <header id="heading">
         <h1>Welcome to Our Event</h1>
         <p>Explore the magic within.</p>
     </header>
 
   <nav>
-    <ul>
+    <ul id="nav-ul">
       <li>
         <a href="">Home</a>
       </li>
