edited index and implemented both schedule files

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <a href="https://kaitlynsamuelian.github.io/test-repo/index.html">Home</a>
       </li>
       <li>
-        <a href="">Blog</a>
+        <a href="https://kaitlynsamuelian.github.io/test-repo/schedule.html">Scheduling and Dates</a>
       </li>
       <li>
         <a href="https://kaitlynsamuelian.github.io/test-repo/about.html">About us</a>
@@ -86,17 +86,6 @@
         Take home Colorado Symphony brand merchandise, fabulous jewelry, and must-have musical themed items from the Colorado Symphony Guild Shop. Located in Gallery 1 on the first floor of Boettcher Concert Hall, The Shop is the perfect place to pick up unique gifts, seasonal fashions, and of course recordings produced by, and of, the Colorado Symphony.
         (Learn More) -- links to about/contact</p>
     </article>
-
-    <aside>
-      <h2>
-        Photography
-      </h2>
-      
-
-    </aside>
   </main>
-
 </body>
-<!-- test -->
-
 </html>
