--- a/landing1.html
+++ b/landing1.html
@@ -7,11 +7,35 @@
   <link rel="stylesheet" href="landing1.css">
 </head>
 <body>
+
+  <nav>
+    <ul id="nav-ul">
+      <li>
+        <a href="https://kaitlynsamuelian.github.io/test-repo/index.html">Home</a>
+      </li>
+      <li>
+        <a href="https://kaitlynsamuelian.github.io/test-repo/schedule.html">Scheduling and Dates</a>
+      </li>
+      <li>
+        <a href="https://kaitlynsamuelian.github.io/test-repo/about.html">About us</a>
+      </li>
+      <li>
+        <a href="">Our history</a>
+      </li>
+      <li>
+        <a href="https://kaitlynsamuelian.github.io/test-repo/contact.html">Contacts</a>
+      </li>
+      <li>
+        <a href="https://kaitlynsamuelian.github.io/test-repo/landing1.html">Membership</a>
+      </li>
+    </ul>
+  </nav>
+
   <section class="hero">
     <img src="landing1.jpeg" alt="Symphony Members" class="hero-img">
     <h1>Join the Symphony Family</h1>
     <p>Enjoy exclusive access, special discounts, and unforgettable experiences by becoming a member today.</p>
-    <a href="/membership-signup" class="cta">Become a Member</a>
+    <a href="landing2.html" class="cta">Become a Member</a>
   </section>
   <section class="benefits">
     <h2>Member Benefits</h2>
