--- a/about.html
+++ b/about.html
@@ -8,7 +8,37 @@
   </head>
 
 <body>
-  <div class="curtain-overlay"></div>
+  <div class="curtain-left"></div>
+  <div class="curtain-right"></div>
+
+  <header id="heading">
+    <h1>Welcome to Our Event</h1>
+    <p>Explore the magic within</p>
+  </header>
+
+  <nav>
+    <ul id="nav-ul">
+      <li>
+        <a href="https://kaitlynsamuelian.github.io/test-repo/index.html">Home</a>
+      </li>
+      <li>
+        <a href="https://kaitlynsamuelian.github.io/test-repo/schedule.html">Scheduling and Dates</a>
+      </li>
+      <li>
+        <a href="https://kaitlynsamuelian.github.io/test-repo/about.html">About us</a>
+      </li>
+      <li>
+        <a href="">Our history</a>
+      </li>
+      <li>
+        <a href="https://kaitlynsamuelian.github.io/test-repo/contact.html">Contacts</a>
+      </li>
+      <li>
+        <a href="https://kaitlynsamuelian.github.io/test-repo/landing1.html">Membership</a>
+      </li>
+    </ul>
+  </nav>
+
 
   <main class="grid">
     <article>
