--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <header id="heading">
         <h1>Welcome to Our Event</h1>
-        <p>Explore the magic within.</p>
+        <p>Explore the magic within</p>
     </header>
 
   <nav>
