--- a/schedule.html
+++ b/schedule.html
@@ -8,10 +8,11 @@
 </head>
 
 <body>
-  <div class="curtain-overlay"></div>
+  <div class="curtain-left"></div>
+  <div class="curtain-right"></div>
   
   <!-- Main Content Section -->
-  <div class="content">
+  <div id="heading">
     <h1>Welcome to Our Event</h1>
     <p>Explore the magic within.</p>
   </div>
