--- a/contact.html
+++ b/contact.html
@@ -8,8 +8,14 @@
   </head>
 
 <body>
-  <div class="curtain-overlay"></div>
+  <div class="curtain-left"></div>
+  <div class="curtain-right"></div>
 
+  <header id="heading">
+      <h1>Welcome to Our Event</h1>
+      <p>Explore the magic within</p>
+  </header>
+  
   <nav>
     <ul id="nav-ul">
       <li>
@@ -42,6 +48,36 @@
       <p>Phone:
         (303) 623-7876, (303) MAESTRO</p>
       <p>E-mail: tickets@coloradosymphony.org</p>
+
+      <h3>Box Office Hours</h3>
+      <p>Monday – Saturday: 10:00 a.m. – 5:00 p.m.</p>
+
+      <p>Sunday: Closed</p>
+
+      <p>Address: 1000 14th Street, No. 15, </p>
+      <p>Denver, CO 80202</p>
+
+
+      <h3>2024/25 Holiday Closures</h3>
+      Thanksgiving: Thursday, November 28, 2024
+
+      Christmas Eve: Tuesday, December 24, 2024
+
+      Christmas Day: Wednesday, December 25, 2024
+
+      New Year’s Day: Wednesday, January 1, 2025
+
+      Colorado Symphony Administration
+      Media Contact
+      Nick Dobreff, Communications and Creative Director
+      (303) 308-2477
+      ndobreff@coloradosymphony.org
+
+      Donors & Sponsors
+      Send an e-mail to giving@coloradosymphony.org with questions regarding donating or becoming a sponsor.
+
+      Admin Address
+      1245 Champa Street,
   </main>
 </body>
 </html>
