--- a/landing1.html
+++ b/landing1.html
@@ -7,6 +7,14 @@
   <link rel="stylesheet" href="landing1.css">
 </head>
 <body>
+  <div class="curtain-left"></div>
+  <div class="curtain-right"></div>
+  
+  <!-- Main Content Section -->
+  <div id="heading">
+    <h1>Welcome to Our Event</h1>
+    <p>Explore the magic within.</p>
+  </div>
 
   <nav>
     <ul id="nav-ul">
