--- a/about.html
+++ b/about.html
@@ -1,92 +1,68 @@
 <!DOCTYPE html>
 <html lang="en-US">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>About Us!</title>
     <link href="about.css" rel="stylesheet" type="text/css">
-  </head>
+</head>
 
 <body>
-  <div class="curtain-left"></div>
-  <div class="curtain-right"></div>
+    <div class="curtain-left"></div>
+    <div class="curtain-right"></div>
 
-  <header id="heading">
-    <h1>Welcome to Our Event</h1>
-    <p>Explore the magic within</p>
-  </header>
+    <header id="heading">
+        <h1>Welcome to Our Event</h1>
+        <p>Explore the magic within</p>
+    </header>
 
-  <nav>
-    <ul id="nav-ul">
-      <li>
-        <a href="https://kaitlynsamuelian.github.io/test-repo/index.html">Home</a>
-      </li>
-      <li>
-        <a href="https://kaitlynsamuelian.github.io/test-repo/schedule.html">Scheduling and Dates</a>
-      </li>
-      <li>
-        <a href="https://kaitlynsamuelian.github.io/test-repo/about.html">About us</a>
-      </li>
-      <li>
-        <a href="">Our history</a>
-      </li>
-      <li>
-        <a href="https://kaitlynsamuelian.github.io/test-repo/contact.html">Contacts</a>
-      </li>
-      <li>
-        <a href="https://kaitlynsamuelian.github.io/test-repo/landing1.html">Membership</a>
-      </li>
-    </ul>
-  </nav>
+    <nav>
+        <ul id="nav-ul">
+            <li><a href="https://kaitlynsamuelian.github.io/test-repo/index.html">Home</a></li>
+            <li><a href="https://kaitlynsamuelian.github.io/test-repo/schedule.html">Scheduling and Dates</a></li>
+            <li><a href="https://kaitlynsamuelian.github.io/test-repo/about.html">About us</a></li>
+            <li><a href="#">Our history</a></li>
+            <li><a href="https://kaitlynsamuelian.github.io/test-repo/contact.html">Contacts</a></li>
+            <li><a href="https://kaitlynsamuelian.github.io/test-repo/landing1.html">Membership</a></li>
+        </ul>
+    </nav>
 
+    <main class="grid">
+        <article>
+            <h1>Meet The Symphony</h1>
+            <section>
+                <h2>About</h2>
+                <p>The Colorado Symphony Association is the region’s only full-time professional orchestra committed to artistic excellence and ensuring the future of live, symphonic music. Performing over 150 concerts annually at Boettcher Concert Hall in downtown Denver and across Colorado, your Colorado Symphony is home to eighty full-time musicians, representing more than a dozen nations, and regularly welcomes the most celebrated artists from all genres of music. Recognized as an incubator of innovation, creativity, and excellence, your Colorado Symphony continually expands its impact through education, outreach, and programming. We partner with the state’s leading musical artists, cultural organizations, corporations, foundations, sports teams, and individuals to expose diverse audiences to the power of symphonic orchestral music.</p>
+            </section>
+            
+            <section>
+                <h3>Our Mission</h3>
+                <p>The future of live, symphonic music.</p>
+            </section>
 
-  <main class="grid">
-    <article>
-      <h1>Meet The Symphony</h1>
-      <p>
-      <h3>About</h3>
+            <section>
+                <h3>Core Values</h3>
+                <p><strong>EXCELLENCE</strong>: We are committed to musical and artistic excellence with a further commitment to ensuring there is a solid future for live symphonic music in Colorado.</p>
+                <p><strong>SUSTAINABILITY</strong>: We are dedicated to maintaining an orchestra of the highest performance standards, modeling best practices and balanced fiscal stewardship.</p>
+                <p><strong>INNOVATION</strong>: We will embrace and maintain our culture of success, calculated risk-taking, fostering imagination, and invention in an ever-changing world of the performing arts.</p>
+                <p><strong>COMMUNITY</strong>: We are committed to growing a culture for modern, relevant, creative music to uplift, unite, and celebrate all people.</p>
+                <p><strong>DIVERSITY & INCLUSION</strong>: We are committed to providing symphonic and educational experiences that celebrate our humanity, reflect and value the diversity of our community, and seek out meaningful collaborations.</p>
+            </section>
 
-      <p>The Colorado Symphony Association is the region’s only full-time professional orchestra committed to artistic excellence and ensuring the future of live, symphonic music. Performing over 150 concerts annually at Boettcher Concert Hall in downtown Denver and across Colorado, your Colorado Symphony is home to eighty full-time musicians, representing more than a dozen nations, and regularly welcomes the most celebrated artists from all genres of music. Recognized as an incubator of innovation, creativity, and excellence, your Colorado Symphony continually expands its impact through education, outreach, and programming. We partner with the state’s leading musical artists, cultural organizations, corporations, foundations, sports teams, and individuals to expose diverse audiences to the power of symphonic orchestral music. </p>
+            <section>
+                <h3>Diversity, Equity, & Inclusion Statement</h3>
+                <p>Music brings people together to inspire and unite the human spirit. The Colorado Symphony Association (CSA) believes that symphonic music must be available to everyone and that communities thrive when music is accessible to all.</p>
+                <p>The CSA is committed to being an inclusive organization where diverse perspectives are sought out and valued; and to create experiences for our audiences where all people and communities feel welcome, represented, and connected. The CSA will continuously strive to achieve greater inclusivity and equity by leading in a way that represents our art form, one of collectivism and harmony.</p>
+                <p>The CSA believes in the dignity of all and respects a diversity of cultures, identities, orientations, heritages, beliefs, and experiences. As a cultural institution and only full-time professional symphony orchestra in the state, we recognize the power of symphonic music and believe we can bring our community together to create greater social understanding through live symphonic music.</p>
+            </section>
 
-      <h4>Our Mission</h4>
-      <p>The future of live, symphonic music.</p>
-
-      <h4>Core Values</h4>
-      <p>EXCELLENCE</p>
-      We are committed to musical and artistic excellence with a further commitment to ensuring there is a solid future for live symphonic music in Colorado.
-
-      <p>SUSTAINABILITY</p>
-      We are dedicated to maintaining an orchestra of the highest performance standards, modeling best practices and balanced fiscal stewardship.
-
-      <p>INNOVATION</p>
-      We will embrace and maintain our culture of success, calculated risk-taking, fostering imagination, and invention in an ever-changing world of the performing arts.
-
-      <p>COMMUNITY</p>
-      We are committed to growing a culture for modern, relevant, creative music to uplift, unite, and celebrate all people.
-
-      <p>DIVERSITY & INCLUSION</p>
-      We are committed to providing symphonic and educational experiences that celebrate our humanity, reflect and value the diversity of our community, and seek out meaningful collaborations.
-
-      </p>Diversity, Equity, & Inclusion Statement<p>
-      Music brings people together to inspire and unite the human spirit. The Colorado Symphony Association (CSA) believes that symphonic music must be available to everyone and that communities thrive when music is accessible to all.
-
-      The CSA is committed to being an inclusive organization where diverse perspectives are sought out and valued; and to create experiences for our audiences where all people and communities feel welcome, represented, and connected. The CSA will continuously strive to achieve greater inclusivity and equity by leading in a way that represents our art form, one of collectivism and harmony.
-
-      The CSA believes in the dignity of all and respects a diversity of cultures, identities, orientations, heritages, beliefs, and experiences. As a cultural institution and only full-time professional symphony orchestra in the state, we recognize the power of symphonic music and believe we can bring our community together to create greater social understanding through live symphonic music.
-      </p>
-
-
-      <h4>What We Offer</h4>
-      <p>Each season the Colorado Symphony presents a wealth of world-class artistry performed by your critically-acclaimed orchestra, the region’s only full-time professional orchestra. We present performances and/or events almost every weekend, September through May. Concert categories include Classics, Symphony Pops, Spotlight,  Family, Holiday,  Movie at the Symphony, Alternative, and even our Summer performances, which feature numerous concerts at the historic Red Rocks Amphitheater.
-
-      In addition to our standard concert season, we’re happy to provide plenty of other fun opportunities for events and activities. Support the symphony by participating in great annual events like the Symphony Gala and social networking opportunities through Colorado Symphony Young Professionals, the Colorado Symphony Guild, Women of Note, and more. Throughout the season you’ll also find pre and post-concert events, like Preludes & Talkbacks, that will make your concert experience extra special. Plus, make a donation to the Colorado Symphony and receive access to special donor events like open rehearsals, happy hours, master classes, and more.
-
-      We offer a wide array of experiences that can involve you and your partner, or you can bring the kids for pre-concert HalfNotes activities and special events geared specifically toward their growing knowledge and love of music. With our commitment to serving the community with culturally enriching musical experiences, we hope that you will visit for any one of our special events or performances. Bring your friends—we have events and activities for everyone’s tastes!
-
-      </p>
-      </article>
-      </main>
-
-      </body>
-
+            <section>
+                <h3>What We Offer</h3>
+                <p>Each season the Colorado Symphony presents a wealth of world-class artistry performed by your critically-acclaimed orchestra, the region’s only full-time professional orchestra. We present performances and/or events almost every weekend, September through May. Concert categories include Classics, Symphony Pops, Spotlight, Family, Holiday, Movie at the Symphony, Alternative, and even our Summer performances, which feature numerous concerts at the historic Red Rocks Amphitheater.</p>
+                <p>In addition to our standard concert season, we’re happy to provide plenty of other fun opportunities for events and activities. Support the symphony by participating in great annual events like the Symphony Gala and social networking opportunities through Colorado Symphony Young Professionals, the Colorado Symphony Guild, Women of Note, and more. Throughout the season you’ll also find pre and post-concert events, like Preludes & Talkbacks, that will make your concert experience extra special. Plus, make a donation to the Colorado Symphony and receive access to special donor events like open rehearsals, happy hours, master classes, and more.</p>
+                <p>We offer a wide array of experiences that can involve you and your partner, or you can bring the kids for pre-concert HalfNotes activities and special events geared specifically toward their growing knowledge and love of music. With our commitment to serving the community with culturally enriching musical experiences, we hope that you will visit for any one of our special events or performances. Bring your friends—we have events and activities for everyone’s tastes!</p>
+            </section>
+        </article>
+    </main>
+</body>
 </html>
