--- a/schedule.html
+++ b/schedule.html
@@ -13,8 +13,8 @@
   
   <!-- Main Content Section -->
   <div id="heading">
-    <h1>Welcome to Our Event</h1>
-    <p>Explore the magic within.</p>
+      <h1>Welcome to the Colorado Symphony</h1>
+      <p>Discover the joy of live music and community</p>
   </div>
 
   <!-- Navigation Bar -->
