--- a/landing1.html
+++ b/landing1.html
@@ -12,9 +12,9 @@
   
   <!-- Main Content Section -->
   <div id="heading">
-    <h1>Welcome to Our Event</h1>
-    <p>Explore the magic within.</p>
-  </div>
+    <h1>Welcome to the Colorado Symphony</h1>
+    <p>Discover the joy of live music and community</p>
+</div>
 
   <nav>
     <ul id="nav-ul">
