--- a/faq.html
+++ b/faq.html
@@ -15,16 +15,16 @@
         <p>Discover the joy of live music and community</p>
     </header>
 
-  <nav>
-    <ul id="nav-ul">
-      <li><a href="https://kaitlynsamuelian.github.io/test-repo/index.html">Home</a></li>
-      <li><a href="https://kaitlynsamuelian.github.io/test-repo/schedule.html">Schedule</a></li>
-      <li><a href="https://kaitlynsamuelian.github.io/test-repo/about.html">About Us</a></li>
-      <li><a href="https://kaitlynsamuelian.github.io/test-repo/our-history.html">Our History</a></li>
-      <li><a href="https://kaitlynsamuelian.github.io/test-repo/contact.html">Contact</a></li>
-      <li><a href="https://kaitlynsamuelian.github.io/test-repo/landing1.html">Membership</a></li>
-    </ul>
-  </nav>
+    <nav>
+        <ul id="nav-ul">
+          <li><a href="https://kaitlynsamuelian.github.io/test-repo/index.html">Home</a></li>
+          <li><a href="https://kaitlynsamuelian.github.io/test-repo/schedule.html">Schedule</a></li>
+          <li><a href="https://kaitlynsamuelian.github.io/test-repo/about.html">About Us</a></li>
+          <li><a href="https://kaitlynsamuelian.github.io/test-repo/faq.html">FAQ</a></li>
+          <li><a href="https://kaitlynsamuelian.github.io/test-repo/contact.html">Contact</a></li>
+          <li><a href="https://kaitlynsamuelian.github.io/test-repo/landing1.html">Membership</a></li>
+        </ul>
+      </nav>
 
   
       <div class="content">
