--- a/schedule.html
+++ b/schedule.html
@@ -21,10 +21,10 @@
   <nav>
     <ul id="nav-ul">
       <li><a href="https://kaitlynsamuelian.github.io/test-repo/index.html">Home</a></li>
-      <li><a href="https://kaitlynsamuelian.github.io/test-repo/schedule.html">Scheduling and Dates</a></li>
-      <li><a href="https://kaitlynsamuelian.github.io/test-repo/about.html">About us</a></li>
-      <li><a href="">Our history</a></li>
-      <li><a href="https://kaitlynsamuelian.github.io/test-repo/contact.html">Contacts</a></li>
+      <li><a href="https://kaitlynsamuelian.github.io/test-repo/schedule.html">Schedule</a></li>
+      <li><a href="https://kaitlynsamuelian.github.io/test-repo/about.html">About Us</a></li>
+      <li><a href="https://kaitlynsamuelian.github.io/test-repo/faq.html">FAQ</a></li>
+      <li><a href="https://kaitlynsamuelian.github.io/test-repo/contact.html">Contact</a></li>
       <li><a href="https://kaitlynsamuelian.github.io/test-repo/landing1.html">Membership</a></li>
     </ul>
   </nav>
