--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 
   <main class="grid">
     <article>
+      <section class="season-overview">
       <h1>Explore Our 2024/25 Season</h1>
       <p>Join us as we celebrate a new season filled with world-class performances and exciting programs for all ages!</p>
       <ul>
@@ -37,15 +38,17 @@
           <a href="https://kaitlynsamuelian.github.io/test-repo/schedule.html">(View Schedule)</a>
         </li>
         <li>
-          <strong>First-Timer’s Guide</strong> - New to the symphony? Get tips on what to expect and FAQs for newcomers.
+          <strong>First-Timer's Guide</strong> - New to the symphony? Get tips on what to expect and FAQs for newcomers.
           <a href="https://kaitlynsamuelian.github.io/test-repo/faq.html">(Start Here)</a>
         </li>
         <li>
-          <strong>Community & Education Programs</strong> – Engage students with youth concerts, open rehearsals, and more.
-          <a href="https://kaitlynsamuelian.github.io/test-repo/education.html">(Explore Programs)</a>
+          <strong>Become a Member Today</strong> -Exclusive access, special discounts, and unforgettable experiences.
+          <a href="https://kaitlynsamuelian.github.io/test-repo/landing1.html">(Member Page)</a>
         </li>
       </ul>
+    </section>
       
+    <section class="concert-experience">
       <h2>Enhance Your Concert Experience</h2>
       <ul>
         <li>
@@ -61,10 +64,12 @@
           <a href="https://kaitlynsamuelian.github.io/test-repo/schedule.html">(View All Classics)</a>
         </li>
       </ul>
-
+    </section>
+    <section class="guild-shop">
       <h2>Visit the Colorado Symphony Guild Shop</h2>
       <p>Located on the first floor of Boettcher Concert Hall, the Guild Shop offers symphony merchandise, jewelry, and musical-themed gifts. Take home a souvenir or find a unique gift for someone special.</p>
       <p><a href="https://kaitlynsamuelian.github.io/test-repo/about.html">(Learn More)</a></p>
+    </section>
     </article>
   </main>
 </body>
