--- a/schedule.html
+++ b/schedule.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-US">
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,11 +11,11 @@
 <body>
   <div class="curtain-left"></div>
   <div class="curtain-right"></div>
-  
+
   <!-- Main Content Section -->
   <div id="heading">
-      <h1>Welcome to the Colorado Symphony</h1>
-      <p>Discover the joy of live music and community</p>
+    <h1>Welcome to the Colorado Symphony</h1>
+    <p>Discover the joy of live music and community</p>
   </div>
 
   <!-- Navigation Bar -->
@@ -33,23 +34,28 @@
   <main class="grid">
     <article>
       <h1>2024/25 Season Performances</h1>
-      <p>Journey with us into our second century as we take a trip through magnificent symphonic works that you’ve come to know and love, reach new heights with elevated guest artists, and explore additional terrains with innovative and diverse programming.</p>
+      <p>Journey with us into our second century as we take a trip through magnificent symphonic works that you’ve come
+        to know and love, reach new heights with elevated guest artists, and explore additional terrains with innovative
+        and diverse programming.</p>
 
       <section class="event">
         <h2>The Colorado Symphony Cello Ensemble</h2>
-        <p>Members of our talented cello section showcase the depth and versatility of the instrument, featuring an array of classical masterpieces and contemporary compositions.</p>
+        <p>Members of our talented cello section showcase the depth and versatility of the instrument, featuring an
+          array of classical masterpieces and contemporary compositions.</p>
         <p><strong>Date:</strong> Thu, Oct 10, 7:30 PM</p>
       </section>
 
       <section class="event">
         <h2>Colorado Symphony Chamber Ensemble at Steamboat Art Museum</h2>
-        <p>Join us as we head to Steamboat Springs for an eclectic evening of chamber music at the Steamboat Art Museum on October 12, 2024.</p>
+        <p>Join us as we head to Steamboat Springs for an eclectic evening of chamber music at the Steamboat Art Museum
+          on October 12, 2024.</p>
         <p><strong>Date:</strong> Sat, Oct 12, 7:00 PM</p>
       </section>
 
       <section class="event">
         <h2>Chris Thile with the Colorado Symphony</h2>
-        <p>Chris Thile’s brand-new work for mandolin, vocals, and orchestra — Attention! — will feature his trademark whimsical songwriting and storytelling, instrumental virtuosity, and ever-present sense of humor.</p>
+        <p>Chris Thile’s brand-new work for mandolin, vocals, and orchestra — Attention! — will feature his trademark
+          whimsical songwriting and storytelling, instrumental virtuosity, and ever-present sense of humor.</p>
         <p><strong>Date:</strong> Sat, Oct 12, 7:30 PM</p>
       </section>
 
@@ -57,46 +63,71 @@
 
       <section class="event">
         <h2>Verdi Requiem: 40th Anniversary Celebration of the Colorado Symphony Chorus</h2>
-        <p>Celebrate the 40th Anniversary of the world-renowned Colorado Symphony Chorus with a renewal of Verdi’s monumental Requiem.</p>
+        <p>Celebrate the 40th Anniversary of the world-renowned Colorado Symphony Chorus with a renewal of Verdi’s
+          monumental Requiem.</p>
         <p><strong>Dates:</strong> Fri, Oct 18, 7:30 PM; Sat, Oct 19, 7:30 PM; Sun, Oct 20, 1:00 PM</p>
       </section>
 
       <section class="event">
         <h2>Disney in Concert: Tim Burton's The Nightmare Before Christmas</h2>
-        <p>The Nightmare Before Christmas will be projected on the big screen with dialogue, singing, and effects accompanied by Danny Elfman’s darkly charming score played live by your Colorado Symphony.</p>
+        <p>The Nightmare Before Christmas will be projected on the big screen with dialogue, singing, and effects
+          accompanied by Danny Elfman’s darkly charming score played live by your Colorado Symphony.</p>
         <p><strong>Dates:</strong> Fri, Oct 25, 7:30 PM; Sat, Oct 26, 7:30 PM</p>
       </section>
 
       <section class="event">
         <h2>Halloween Spooktacular!</h2>
-        <p>It’s a spooktacular event for all boys and ghouls! This family-favorite concert features music from films, television, and more!</p>
+        <p>It’s a spooktacular event for all boys and ghouls! This family-favorite concert features music from films,
+          television, and more!</p>
         <p><strong>Date:</strong> Sun, Oct 27, 2:30 PM</p>
       </section>
 
       <section class="event">
         <h2>FINAL FANTASY VII REBIRTH Orchestra World Tour</h2>
-        <p>AWR Music Productions and Square Enix are proud to introduce FINAL FANTASY VII REBIRTH Orchestra World Tour, an electrifying new concert based entirely on the groundbreaking game from SQUARE ENIX.</p>
+        <p>AWR Music Productions and Square Enix are proud to introduce FINAL FANTASY VII REBIRTH Orchestra World Tour,
+          an electrifying new concert based entirely on the groundbreaking game from SQUARE ENIX.</p>
         <p><strong>Dates:</strong> Fri, Nov 1, 7:30 PM; Sat, Nov 2, 7:30 PM</p>
       </section>
 
       <section class="event">
         <h2>Rachmaninoff Piano Concerto No. 2 with Simon Trpceski</h2>
-        <p>Experience an unforgettable evening as the Colorado Symphony and Principal Conductor Peter Oundjian showcase iconic works by Rachmaninoff and Mahler.</p>
+        <p>Experience an unforgettable evening as the Colorado Symphony and Principal Conductor Peter Oundjian showcase
+          iconic works by Rachmaninoff and Mahler.</p>
         <p><strong>Dates:</strong> Fri, Nov 8, 7:30 PM; Sat, Nov 9, 7:30 PM; Sun, Nov 10, 1:00 PM</p>
       </section>
 
       <section class="event">
         <h2>Béla Fleck Plays Gershwin's Rhapsody in Blue</h2>
-        <p>Experience a groundbreaking musical fusion as banjo great Béla Fleck takes center stage alongside the Colorado Symphony for a captivating rendition of George Gershwin’s iconic Rhapsody in Blue.</p>
+        <p>Experience a groundbreaking musical fusion as banjo great Béla Fleck takes center stage alongside the
+          Colorado Symphony for a captivating rendition of George Gershwin’s iconic Rhapsody in Blue.</p>
         <p><strong>Dates:</strong> Sat, Nov 16, 7:30 PM; Sun, Nov 17, 1:00 PM</p>
       </section>
 
       <section class="event">
         <h2>Saint-Saëns Organ Symphony with Christopher Dragon</h2>
-        <p>With Time for Three in town and ever-energetic Resident Conductor Christopher Dragon at the helm, this is Classical at its most current.</p>
+        <p>With Time for Three in town and ever-energetic Resident Conductor Christopher Dragon at the helm, this is
+          Classical at its most current.</p>
         <p><strong>Dates:</strong> Fri, Nov 22, 7:30 PM; Sat, Nov 23, 7:30 PM; Sun, Nov 24, 1:00 PM</p>
       </section>
     </article>
+    <aside>
+      <h2>Image Gallery</h2>
+
+
+      <div class="image-container">
+        <img src="images/schedule/Chris-Thile.jpg" alt="Description of the image" class="IMG">
+        <p class="image-caption">Mandolinist, singer: Chris Tile</p>
+      </div>
+   
+
+      <div class="image-container">
+        <img src="images/schedule/bela-fleck.jpg" alt="Description of the image" class="IMG">
+        <p class="image-caption"> Banjo great: Béla Fleck</p>
+      </div>
+
+
+    </aside>
   </main>
 </body>
+
 </html>
