--- a/index.html
+++ b/index.html
@@ -34,14 +34,17 @@
       <p>Join us as we celebrate a new season filled with world-class performances and exciting programs for all ages!</p>
       <ul>
         <li>
+          <img src="images/about/seasonPIC.jpg" alt="season overview pic" class="season-img">
           <strong>Season Tickets On Sale Now</strong> - Explore our concert calendar and secure your seats today!
           <a href="https://kaitlynsamuelian.github.io/test-repo/schedule.html">(View Schedule)</a>
         </li>
         <li>
+          <img src="images/about/faq.jpg" alt="brochure pic" class="other-img">
           <strong>First-Timer's Guide</strong> - New to the symphony? Get tips on what to expect and FAQs for newcomers.
           <a href="https://kaitlynsamuelian.github.io/test-repo/faq.html">(Start Here)</a>
         </li>
         <li>
+          <img src="images/about/member.jpg" alt="season overview pic" class="other-img">
           <strong>Become a Member Today</strong> -Exclusive access, special discounts, and unforgettable experiences.
           <a href="https://kaitlynsamuelian.github.io/test-repo/landing1.html">(Member Page)</a>
         </li>
