--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <a href="https://kaitlynsamuelian.github.io/test-repo/faq.html">(Start Here)</a>
         </li>
         <li>
-          <img src="images/about/member.jpg" alt="season overview pic" class="other-img">
+          <img src="images/about/member.jpg" alt="membership pic" class="other-img">
           <strong>Become a Member Today</strong> -Exclusive access, special discounts, and unforgettable experiences.
           <a href="https://kaitlynsamuelian.github.io/test-repo/landing1.html">(Member Page)</a>
         </li>
