--- a/contact.html
+++ b/contact.html
@@ -30,6 +30,7 @@
   <main class="grid">
     <article>
       <div class="contact-info">
+        <img src="images/contact.jpg" alt="contact pic" class="img">
         <h1>Contact Us</h1>
         <p><strong>Phone:</strong> (303) 623-7876, (303) MAESTRO</p>
         <p><strong>E-mail:</strong> <a href="mailto:tickets@coloradosymphony.org">tickets@coloradosymphony.org</a></p>
