--- a/schedule.html
+++ b/schedule.html
@@ -13,10 +13,10 @@
   <div class="curtain-right"></div>
 
   <!-- Main Content Section -->
-  <div id="heading">
+  <header id="heading">
     <h1>Welcome to the Colorado Symphony</h1>
     <p>Discover the joy of live music and community</p>
-  </div>
+  </header>
 
   <!-- Navigation Bar -->
   <nav>
