--- a/landing1.html
+++ b/landing1.html
@@ -11,10 +11,10 @@
   <div class="curtain-right"></div>
   
   <!-- Main Content Section -->
-  <div id="heading">
+  <header id="heading">
     <h1>Welcome to the Colorado Symphony</h1>
     <p>Discover the joy of live music and community</p>
-</div>
+  </header>
 
 <nav>
   <ul id="nav-ul">
