--- a/schedule.html
+++ b/schedule.html
@@ -110,21 +110,31 @@
         <p><strong>Dates:</strong> Fri, Nov 22, 7:30 PM; Sat, Nov 23, 7:30 PM; Sun, Nov 24, 1:00 PM</p>
       </section>
     </article>
+    
     <aside>
       <h2>Image Gallery</h2>
 
 
       <div class="image-container">
-        <img src="images/schedule/Chris-Thile.jpg" alt="Description of the image" class="IMG">
+        <img src="images/schedule/Chris-Thile.jpg" alt="Singer and mandolinist" class="IMG">
         <p class="image-caption">Mandolinist, singer: Chris Tile</p>
       </div>
    
 
       <div class="image-container">
-        <img src="images/schedule/bela-fleck.jpg" alt="Description of the image" class="IMG">
+        <img src="images/schedule/bela-fleck.jpg" alt="Banjo player" class="IMG">
         <p class="image-caption"> Banjo great: Béla Fleck</p>
       </div>
 
+      <div class="image-container">
+        <img src="images/schedule/cellos.png" alt="Two women with cellos" class="IMG">
+        <p class="image-caption"> Cello players</p>
+      </div>
+
+      <div class="image-container">
+        <img src="images/schedule/steamboat-springs.jpg" alt="Steamboat springs" class="IMG">
+        <p class="image-caption"> Steamboat Springs, great location</p>
+      </div>
 
     </aside>
   </main>
