--- a/faq.html
+++ b/faq.html
@@ -31,8 +31,8 @@
           <p>Here are some frequently asked questions about Colorado Symphony concerts that are intended to help make your visit fun, memorable, and stress-free. If you don’t see the answer to your question here, feel free to contact us at <a href="mailto:tickets@coloradosymphony.org">tickets@coloradosymphony.org</a> or call the Box Office at (303) 623-7876. We might even add your inquiry to this list!</p>
           <p>If you still have more questions, <a href="contact.html">contact us here</a>.</p>
   
-          <img src="images/schedule/bela-fleck.jpg" alt="Description of the image" class="IMG">
-          <p class="image-caption"> Banjo great: Béla Fleck</p>
+          <img src="images/about/faq.jpg" alt="FAG" class="IMG">
+          <p class="image-caption"> FAQ Information</p>
 
           <div class="grid">
               <article>
