--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <article>
       <h2>Explore Our 2024/25 Season</h2>
       <section class="season-overview">
+      <h3>Season Overview</h3>
       <p>Join us as we celebrate a new season filled with world-class performances and exciting programs for all ages!</p>
       <ul>
         <li>
