--- a/contact.html
+++ b/contact.html
@@ -30,8 +30,8 @@
   <main class="grid">
     <article>
       <div class="contact-info">
+        <h2>Contact Us</h2>
         <img src="images/contact.jpg" alt="contact pic" class="img">
-        <h1>Contact Us</h1>
         <p><strong>Phone:</strong> (303) 623-7876, (303) MAESTRO</p>
         <p><strong>E-mail:</strong> <a href="mailto:tickets@coloradosymphony.org">tickets@coloradosymphony.org</a></p>
     
@@ -58,6 +58,7 @@
         <h3>Admin Address</h3>
         <p>1245 Champa Street</p>
       </div>
+    </article>
   </main>
 </body>
 </html>
