--- a/faq.html
+++ b/faq.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="faq.css">
-    <title>Frequently Asked Questions</title>
 </head>
 <body>
     <div class="curtain-left"></div>
@@ -27,7 +26,7 @@
       </nav>
       
       <div class="content">
-          <h1 id="heading">Frequently Asked Questions</h1>
+          <h2>Frequently Asked Questions</h2>
           <p>Here are some frequently asked questions about Colorado Symphony concerts that are intended to help make your visit fun, memorable, and stress-free. If you don’t see the answer to your question here, feel free to contact us at <a href="mailto:tickets@coloradosymphony.org">tickets@coloradosymphony.org</a> or call the Box Office at (303) 623-7876. We might even add your inquiry to this list!</p>
           <p>If you still have more questions, <a href="contact.html">contact us here</a>.</p>
   
