--- a/faq.html
+++ b/faq.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Frequently Asked Questions</title>
     <link rel="stylesheet" href="faq.css">
 </head>
+
 <body>
     <div class="curtain-left"></div>
     <div class="curtain-right"></div>
