--- a/contact.html
+++ b/contact.html
@@ -57,6 +57,12 @@
     
         <h3>Admin Address</h3>
         <p>1245 Champa Street</p>
+        <div class="image-row">
+          <img src="images/contact2.jpg" alt="Contact 2" class="img2">
+          <img src="images/contact3.jpg" alt="Contact 3" class="img2">
+          <img src="images/contact4.jpg" alt="Contact 4" class="img2">
+        </div>
+        <p><i>Peter Oundjian, Paul Naslund, Carolyn Kunicki</i></p>
       </div>
     </article>
   </main>
