--- a/faq.html
+++ b/faq.html
@@ -33,38 +33,43 @@
           <p>If you still have more questions, <a href="contact.html">contact us here</a>.</p>
   
           <img src="images/about/faq.jpg" alt="FAG" class="IMG">
-          <p class="image-caption"> FAQ Information</p>
+          <p class="image-caption"> Frequently Asked Questions Brochure</p>
 
           <div class="grid">
               <article>
                   <h2>Ticketing</h2>
                   <h3>Can I exchange or refund my ticket purchase?</h3>
-                  <p><strong>Refunds and Exchanges:</strong> All sales are final. No refunds. Verify all information (title, date, time, seat selection, etc.) before purchasing tickets. Please Note: All ticket exchange requests must be made at least 24 hours before your scheduled performance...</p>
+                  <p><strong>Refunds and Exchanges:</strong> All sales are final. No refunds. Verify all information (title, date, time, seat selection, etc.) before purchasing tickets. Please Note: All ticket exchange requests must be made at least 24 hours before your scheduled performance</p>
                   <h3>How do I use my on-account credit?</h3>
-                  <p><strong>On-Account Credit:</strong> If you received on-account credit for a ticket return or exchange, you may use this credit through the conclusion of the concert season in which it was given...</p>
+                  <p><strong>On-Account Credit:</strong> If you received on-account credit for a ticket return or exchange, you may use this credit through the conclusion of the concert season in which it was given</p>
                   <h3>How do I access my tickets online?</h3>
-                  <p>Colorado Symphony tickets are now available within the My Upcoming Events section of your Account at coloradosymphony.org...</p>
+                  <p>Colorado Symphony tickets are now available within the My Upcoming Events section of your Account at coloradosymphony.org</p>
                   <h3>How much do Colorado Symphony tickets cost?</h3>
-                  <p><strong>Standard Ticketing:</strong> Prices vary based on the concert...</p>
+                  <p><strong>Standard Ticketing:</strong> Prices vary based on the concert</p>
                   <h3>Discounted Ticketing:</h3>
-                  <p>There are several ways to save money on ticket prices, and the quickest and easiest way is to sign up for eNotes...</p>
+                  <p>There are several ways to save money on ticket prices, and the quickest and easiest way is to sign up for eNotes</p>
               </article>
   
               <aside>
                   <h2>Before You Go</h2>
                   <h3>What should I know before I go?</h3>
-                  <p>Patrons are strongly encouraged to arrive early to factor in downtown traffic, parking, security, and getting to your seats before the performance begins...</p>
+                  <p>Patrons are strongly encouraged to arrive early to factor in downtown traffic, parking, security, and getting to your seats before the performance begins.</p>
                   <h3>What Accessible services do you offer?</h3>
-                  <p>Your Colorado Symphony is committed to providing an accessible, enjoyable concert experience for all...</p>
+                  <p>Your Colorado Symphony is committed to providing an accessible, enjoyable concert experience for all.</p>
                   <h3>What should I wear to a Colorado Symphony concert?</h3>
-                  <p>Contrary to what many people think, formal attire like tuxedos and evening gowns are not required...</p>
+                  <p>Contrary to what many people think, formal attire like tuxedos and evening gowns are not required.</p>
                   <h3>What if I am late to the concert?</h3>
-                  <p>For the comfort and enjoyment of our musicians and patrons, late seating is at the discretion of the House Manager...</p>
+                  <p>For the comfort and enjoyment of our musicians and patrons, late seating is at the discretion of the House Manager.</p>
                   <h3>Can I bring food or drinks into the concert?</h3>
-                  <p>You are welcome to bring drinks purchased at one of the bars into all concerts. Food is not allowed in the Hall...</p>
+                  <p>You are welcome to bring drinks purchased at one of the bars into all concerts. Food is not allowed in the Hall.</p>
               </aside>
           </div>
       </div>
+      <div class="ticket-images">
+        <img src="images/ticket1.jpg" alt="Ticket Image 1" class="ticket-img">
+        <img src="images/ticket2.jpg" alt="Ticket Image 2" class="ticket-img">
+        <img src="images/schedule/ticket3.jpg" alt="Ticket Image 3" class="ticket-img">
+    </div>
   </body>
   </html>
   
