--- a/faq.html
+++ b/faq.html
@@ -64,12 +64,13 @@
                   <p>You are welcome to bring drinks purchased at one of the bars into all concerts. Food is not allowed in the Hall.</p>
               </aside>
           </div>
-      </div>
+      
       <div class="ticket-images">
-        <img src="images/ticket1.jpg" alt="Ticket Image 1" class="ticket-img">
-        <img src="images/ticket2.jpg" alt="Ticket Image 2" class="ticket-img">
+        <img src="images/schedule/ticket1.jpg" alt="Ticket Image 1" class="ticket-img">
+        <img src="images/schedule/ticket2.jpg" alt="Ticket Image 2" class="ticket-img">
         <img src="images/schedule/ticket3.jpg" alt="Ticket Image 3" class="ticket-img">
     </div>
+</div>
   </body>
   </html>
   
